# fun007

./: .gitignore  LICENSE  README.md  README.md~  bootstrap.sh  index.html
ArchInstallScript/: README.md  arch-mirror-setup.sh  archinstall.sh  archinstall_interactive.sh  generate_config.sh
BlackHolePLT/: blackholeplot.py  blackholeplot_v2.py
BuffonsNeedle/: buffon_needle_results.md
ChessPizs/: CPz.py
DWNFDCleaner/: main.py
Fonts_installer/: fonts_installer.sh  fonts_installer.sh~
FootballFixtures/: footyfixture.py  footyfixture.py~  matches_Date_16-06-24.json
Footy_craze/: regi.html
GKickstrt/: prb1.py  prb2.py
ISO_verifier/: README.md  iso_verifier.ps1  iso_verifier.sh
Lattice_visualization/: README.md  lattice_visualization_module.py  main.py  setup.py
LenientGradCalc/: lenientgradcalc.py
MTU_size_optimiser/: mtu_optimizer.sh
OPAI_CHAT/: opai_cht  opai_cht.c  opai_cht.py
OPEN_AI_CHAT/: openai-chat.spec  openai.py
PDF2MP3/: main.py
PDF_scanner/: PDF_keywords_finder.py  README.md
PDF_splitter/: README.md  Readme.md  setup.py  split_pdf.py  split_pdf.spec
PI/: PI.py
Passwd_Generator/: passwd_gen.py
Python_kws/: py_kws.py  py_kws.py~
RandNameGen/: README.md  rand_name_gen.py  setup.py
SRT_conv/: Readme.md  srt_tr.py  srt_tr.spec
Tactics_board/: CMakeLists.txt
Tactics_board/include/: Menu.hpp  Player.hpp  TacticsBoard.hpp
Tactics_board/resources/player_list/: players.txt
Tactics_board/source/: Menu.cpp  Player.cpp  TacticsBoard.cpp  main.cpp
Termux_postinstallconfig_script/: README.md  Termux_PostInstall_automaton.sh
(+221 files in other folders)
